# opticloud

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.new  HOWTO-local-demo.md  LICENSE  NOTICE  README.md  bandit.yaml  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.yml  license-allowed.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  网站方案.md
.github/workflows/: chromatic.yml  ci.yml  e2e.yml  image-build.yml  (+1 more)
_bmad-output/: deferred-work.md
apps/auth-service/: Dockerfile  README.md  pyproject.toml
apps/auth-service/src/auth_service/: __init__.py  account_deletion.py  account_deletion_cli.py  account_merge.py  admin_routes.py  appeals.py  config.py  data_export.py  data_export_cli.py  db.py  frozen_appeals.py  main.py  models.py  risk.py  routes.py  schemas.py  security.py
apps/auth-service/tests/: conftest.py  test_account_deletion.py  test_account_merge.py  test_age_gate.py  test_age_gate_signup.py  test_api_keys_routes.py  test_data_exports.py  test_edu_signup.py  test_frozen_appeals.py  test_login_routes.py  test_risk_appeals.py  test_risk_freeze.py  test_security.py
apps/billing-service/: pyproject.toml
apps/billing-service/src/billing_service/: RECONCILER.md  __init__.py  auth_dep.py  buckets.py  compensations.py  config.py  db.py  exceptions.py  invoices.py  main.py  models.py  plans.py  pricing.py  reconciler.py  reconciler_cli.py  routes.py  saga_orchestrator.py  schemas.py  topups.py
apps/billing-service/tests/: CRITICAL_SCENARIOS.md  conftest.py  test_buckets.py  test_charge_idempotency_routes.py  test_charge_routes.py  test_classify_warnings.py  test_compensations.py  test_cost_telemetry_hook.py  test_critical_audit.py  test_critical_concurrency.py  test_critical_idempotency.py  test_critical_invariants.py  test_critical_pricing.py  test_critical_transitions.py  test_invariants.py  test_invoice_routes.py  test_pricing.py  test_property_pricing.py  test_property_saga_walks.py  test_reconciler.py  test_saga_contract_fixtures.py  test_saga_integration.py  test_saga_payload_ref_safety.py  test_subscription_routes.py  test_topup_routes.py
apps/chat-service/: pyproject.toml
apps/chat-service/src/chat_service/: __init__.py  aigc_watermark.py  coder.py  confidence_display.py  config.py  critic.py  file_context.py  formulator.py  gate.py  human_review.py  language_response.py  llm_intent.py  main.py  model_preview.py  router_preview.py  sandbox.py  schemas.py  streaming.py  what_if_context.py
apps/chat-service/tests/: test_aigc_filter_invoke.py  test_aigc_redteam_ci_filter.py  test_coder.py  test_confidence_display.py  test_critic.py  test_critic_redteam_aigc_gate.py  test_file_context.py  test_formulator.py  test_human_review.py  test_internal_beta.py  test_language_response.py  test_llm_intent.py  test_model_preview.py  test_sandbox.py  test_sandbox_logs_stream_deferred.py  test_sse_streaming.py  test_what_if_context.py
apps/outbox-relayer/: Dockerfile  pyproject.toml
apps/outbox-relayer/src/outbox_relayer/: __init__.py  broker.py  config.py  db.py  health.py  main.py  relayer.py
apps/outbox-relayer/tests/: conftest.py  test_health.py  test_relayer_integration.py
apps/sandbox-runner/: pyproject.toml
apps/sandbox-runner/src/sandbox_runner/: __init__.py  executor.py  main.py  policy.py  schemas.py
apps/sandbox-runner/tests/: test_logs_stream_deferred.py  test_sandbox_runner_contract.py
apps/solver-orchestrator/: README.md  pyproject.toml
apps/solver-orchestrator/src/solver_orchestrator/: BILLING_RECONCILER.md  CITATION_TRACKER.md  __init__.py  auth.py  billing_client.py  billing_reconciler.py  billing_reconciler_cli.py  catalog.py  citation_tracker.py  citation_tracker_cli.py  config.py  db.py  error_catalog.py  error_context.py  error_responses.py  fallback_execution.py  forecasting.py  geo_risk.py  main.py  models.py  provider_routing.py  repro.py  repro_bitwise_audit.py  repro_bitwise_audit_cli.py  routes.py  schemas.py  solvers.py
apps/solver-orchestrator/tests/: conftest.py  test_algorithm_details.py  test_backtest_discount.py  test_batch_endpoint.py  test_billing_integration.py  test_billing_reconciler.py  test_cancel_refund.py  test_citation.py  test_citation_tracker.py  test_cost_attribution.py  test_demo_optimizations.py  test_fallback_chain.py  test_fallback_execution.py  test_geo_anomaly_risk.py  test_geo_risk.py  test_max_solve_seconds_cap.py  test_mock_real_divergence.py  test_prediction_submission.py  test_provider_routing.py  test_repro_bitwise_audit.py  test_reproduction_rerun.py  test_reproduction_vouchers.py  test_rfc7807_errors_detail.py  test_solver_enum.py  test_solvers.py  test_status_progress_eta.py  test_sync_async_mode.py  test_top_k_alternatives.py  test_unaudited_self_block.py
docs/: academic-joint-whitepaper-outline.zh-CN.md  academic-paper-template.zh-CN.md  academic-provider-handbook.md  critic-annotation-sop.md  enterprise-gtm-toolkit.md  industry-use-cases.md  legal-templates.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
scripts/: build_and_sign.sh  check_licenses.py  check_licenses.sh  check_openapi_drift.py  generate_openapi.py  report_aigc_filter_metrics.py  sbom_diff.py  start_service.py  validate_api_gateway_perf_plan.py  validate_blue_green_deploy.py  validate_chat_load_plan.py  validate_gtm_toolkit.py  validate_gurobi_benchmark.py  validate_image_archival_pipeline.py  validate_image_archival_plan.py  validate_j3_incident_contract.py  validate_k8s_network_policies.py  validate_llm_router_contract.py  validate_saga_cross_epic_dryrun.py  validate_sandbox_security_audit.py  validate_traffic_replay_plan.py
tests/: test_api_gateway_perf_plan.py  test_blue_green_deploy.py  test_chat_load_plan.py  test_critic_calibration.py  test_gtm_toolkit.py  test_gurobi_benchmark.py  test_image_archival_pipeline.py  test_image_archival_plan.py  test_j3_incident_contract.py  test_k8s_network_policies.py  test_saga_cross_epic_dryrun.py  test_sandbox_logs_stream_handoff.py  test_traffic_replay_plan.py
(+379 files in other folders)
