# OptiCloud — Python monorepo (uv workspace)
# Constraint C6: Python 3.12 locked

[project]
name = "opticloud-monorepo"
version = "0.0.1"
description = "OptiCloud — 通用优化与预测云 (Sprint 0) — monorepo root (tooling config only)"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
# Only members with pyproject.toml; other services added as they come online.
members = [
  "apps/auth-service",
  "apps/solver-orchestrator",
  "packages/shared-py",
  "packages/python-sdk",
]

# ----- Story 0.5: ruff config (Pattern P10-P14 naming enforcement) -----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]

[tool.ruff.lint]
select = [
  "E", "W",       # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "N",            # pep8-naming (P10-P14)
  "UP",           # pyupgrade
  "B",            # flake8-bugbear
  "C4",           # flake8-comprehensions
  "S",            # flake8-bandit (lite)
  "ASYNC",        # flake8-async
  "T20",          # flake8-print (P10-P14 reject hardcoded prints)
]
ignore = [
  "E501",         # line-length handled by formatter
  "S101",         # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- Story 0.5: mypy strict -----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
