[project]
name = "opticloud-auth-service"
version = "0.0.1"
description = "OptiCloud Auth Service — signup / API Key / JWT / 风控 (Story 0.6, FR A1-A10)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.5",
  "pyjwt[crypto]>=2.10",     # D8 Ed25519 JWT
  "cryptography>=43.0",      # HMAC-SHA256 + Ed25519
  "argon2-cffi>=23.1",       # 密码 hash (后期 password support)
  "structlog>=24.1",
  "opticloud-shared",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",             # AsyncClient for endpoint testing
  "hypothesis>=6.115",       # Property-based (Story 0.5b)
]

[tool.uv.sources]
opticloud-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
