[project]
name = "opticloud-chat-service"
version = "0.0.1"
description = "OptiCloud Chat Service — internal beta NL input gate (Story 4.A.1)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "opticloud-shared",
  "opticloud-sandbox-runner",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.uv.sources]
opticloud-shared = { workspace = true }
opticloud-sandbox-runner = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_service"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/shared-py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
