[project]
name = "opticloud-outbox-relayer"
version = "0.0.1"
description = "OptiCloud Outbox Relayer Sidecar — polls outbox + publishes to Redis (Story M2.1)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "opticloud-shared",
  "asyncpg>=0.29",
  "redis>=5.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "prometheus-client>=0.21",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.uv.sources]
opticloud-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outbox_relayer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
