[project]
name = "opticloud-sandbox-runner"
version = "0.0.1"
description = "OptiCloud Sandbox Runner — P58 I/O contract + P62 self-loop prevention"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_runner"]
