[project]
name = "opticloud-solver-orchestrator"
version = "0.0.1"
description = "OptiCloud Solver Orchestrator — Story 2.1 + 3.1 (FR C1-C8 + E1-E10)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.5",
  "highspy>=1.7",                # HiGHS LP/MIP solver (MIT license, Architecture C1)
  "numpy>=1.26",
  "structlog>=24.1",
  "opticloud-shared",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "hypothesis>=6.115",
]

[tool.uv.sources]
opticloud-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solver_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
